--- a/index.html
+++ b/index.html
@@ -1,29 +1,137 @@
-<!doctype html>
-<html lang="pt-PT">
+<!DOCTYPE html>
+<html lang="pt">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TATIL — Atelier de Artes Inclusivo</title>
-  <meta name="description" content="TATIL Atelier de Artes Inclusivo — práticas artísticas sensíveis à neurodiversidade. Rua de Xabregas 20, Escritório 3.15, Lisboa.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TATIL Atelier de Artes Inclusivo</title>
   <style>
-    body{font-family:'Inter',sans-serif;margin:0;padding:0;background:#fff;color:#111;line-height:1.6}
-    header{background:#0f766e;color:white;padding:1.5rem;text-align:center}
-    header h1{margin:0;font-size:1.8rem}
-    main{max-width:900px;margin:2rem auto;padding:1rem}
-    h2{color:#0f766e;margin-top:0}
-    .card{background:#f8fafc;padding:1.2rem 1.5rem;border-radius:12px;margin-bottom:1.5rem;box-shadow:0 4px 12px rgba(0,0,0,0.05)}
-    iframe{width:100%;border:none;border-radius:8px}
-    footer{text-align:center;padding:1rem;font-size:0.9rem;color:#555;border-top:1px solid #eee;margin-top:2rem}
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      background: linear-gradient(180deg, #f8f8f8, #d6d0dc);
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #6d5b8c;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    header p {
+      font-size: 1rem;
+      opacity: 0.9;
+    }
+    section {
+      padding: 2rem 1rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
+    .gallery img {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      background: #eee;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+      background-color: #f3f0f6;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    input, select, textarea {
+      padding: 0.8rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-family: inherit;
+      font-size: 1rem;
+    }
+    button {
+      background-color: #6d5b8c;
+      color: white;
+      border: none;
+      padding: 0.9rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background-color: #59497b;
+    }
+    footer {
+      background-color: #6d5b8c;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>TATIL — Atelier de Artes Inclusivo</h1>
-    <p>Arte para todos os sentidos · Rua de Xabregas 20, Escritório 3.15, Lisboa</p>
+    <h1>TATIL Atelier de Artes Inclusivo</h1>
+    <p>Espaço de criação artística e inclusão para pessoas com autismo<br>
+    Rua de Xabregas 20, Escritório 3.15 — Lisboa</p>
   </header>
+
+  <section>
+    <h2>Sobre o Atelier</h2>
+    <p>O TATIL Atelier é um espaço dedicado à prática artística inclusiva, promovendo experiências de expressão e autonomia através da arte. Trabalhamos com jovens e adultos no espectro do autismo, criando um ambiente sensível, criativo e acolhedor.</p>
+  </section>
+
+  <section>
+    <h2>Galeria</h2>
+    <div class="gallery">
+      <img src="https://via.placeholder.com/400x300.png?text=Imagem+1" alt="Obra 1">
+      <img src="https://via.placeholder.com/400x300.png?text=Imagem+2" alt="Obra 2">
+      <img src="https://via.placeholder.com/400x300.png?text=Imagem+3" alt="Obra 3">
+    </div>
+  </section>
+
+  <section>
+    <h2>Inscrições</h2>
+    <p>Preencha o formulário abaixo para se inscrever nas nossas oficinas artísticas.</p>
+
+    <form action="https://formspree.io/f/mzzbbyql" method="POST">
+      <label>Nome completo</label>
+      <input type="text" name="nome" required>
+
+      <label>Email</label>
+      <input type="email" name="email" required>
+
+      <label>Oficina</label>
+      <select name="oficina" required>
+        <option value="">Selecione uma oficina</option>
+        <option>Tutoria Artística</option>
+        <option>Desenho</option>
+        <option>Criação de Práticas Artísticas</option>
+        <option>Desenvolvimento de Competências Artísticas</option>
+      </select>
+
+      <label>Mensagem ou observações</label>
+      <textarea name="mensagem" rows="4"></textarea>
+
+      <button type="submit">Enviar inscrição</button>
+    </form>
+  </section>
+
+  <footer>
+    © 2025 TATIL Atelier — Todos os direitos reservados | tatil.atelier@gmail.com
+  </footer>
+</body>
+</html>
 
   <main>
     <section class="card">
