--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@
     <h2>Inscrições</h2>
     <p>Preencha o formulário abaixo para se inscrever nas nossas oficinas artísticas.</p>
 
-    <form action="https://formspree.io/f/mzzbbyql" method="POST">
-      <label>Nome completo</label>
-      <input type="text" name="nome" required>
+   <form action="https://formspree.io/f/SEU_FORM_ID_AQUI" method="POST">
+  <label>Nome completo</label>
+  <input type="text" name="nome" required>
 
-      <label>Email</label>
-      <input type="email" name="email" required>
+  <label>Email</label>
+  <input type="email" name="email" required>
 
-      <label>Oficina</label>
-      <select name="oficina" required>
-        <option value="">Selecione uma oficina</option>
-        <option>Tutoria Artística</option>
-        <option>Desenho</option>
-        <option>Criação de Práticas Artísticas</option>
-        <option>Desenvolvimento de Competências Artísticas</option>
-      </select>
+  <label>Oficina</label>
+  <select name="oficina" required>
+    <option value="">Selecione uma oficina</option>
+    <option value="Tutoria Artística">Tutoria Artística</option>
+    <option value="Desenho">Desenho</option>
+    <option value="Criação de Práticas Artísticas">Criação de Práticas Artísticas</option>
+    <option value="Desenvolvimento de Competências Artísticas">Desenvolvimento de Competências Artísticas</option>
+  </select>
 
-      <label>Mensagem ou observações</label>
-      <textarea name="mensagem" rows="4"></textarea>
+  <label>Mensagem ou observações</label>
+  <textarea name="mensagem" rows="4"></textarea>
 
-      <button type="submit">Enviar inscrição</button>
-    </form>
-  </section>
+  <button type="submit">Enviar inscrição</button>
+</form>
+</section>
 
   <footer>
     © 2025 TATIL Atelier — Todos os direitos reservados | tatil.atelier@gmail.com
