--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <section>
     <h2>Inscrições</h2>
-    <p>Preencha o formulário abaixo para se inscrever nas nossas oficinas artísticas.</p>
+    <p>Preencha o formulário abaixo para se inscrever nas oficinas artísticas.</p>
 
    <form action="https://formspree.io/f/SEU_FORM_ID_AQUI" method="POST">
   <label>Nome completo</label>
