--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
     <p>Preencha o formulário abaixo para se inscrever nas oficinas artísticas.</p>
 
    <form action="https://formspree.io/f/mdkykjnb" method="POST">
+  <input type="hidden" name="_subject" value="Inscrição Oficina – TATIL Atelier">
+  <input type="hidden" name="_replyto" value="tatil.atelier@gmail.com">
+
   <label>Nome completo</label>
   <input type="text" name="nome" required>
 
