--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TATIL Atelier de Artes Inclusivo</title>
+  <title>TÁTIL Atelier de Artes Inclusivo</title>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -81,14 +81,14 @@
 </head>
 <body>
   <header>
-    <h1>TATIL Atelier de Artes Inclusivo</h1>
+    <h1>TÁTIL Atelier de Artes Inclusivo</h1>
     <p>Espaço de criação artística e inclusão para pessoas com autismo<br>
     Rua de Xabregas 20, Escritório 3.15 — Lisboa</p>
   </header>
 
   <section>
     <h2>Sobre o Atelier</h2>
-    <p>O TATIL Atelier é um espaço dedicado à prática artística inclusiva, promovendo experiências de expressão e autonomia através da arte. Trabalhamos com jovens e adultos no espectro do autismo, criando um ambiente sensível, criativo e acolhedor.</p>
+    <p>O TÁTIL Atelier é um espaço dedicado à prática artística inclusiva, promovendo experiências de expressão e autonomia através da arte. Trabalhamos com jovens e adultos no espectro do autismo, criando um ambiente criativo e acolhedor para criação artística.</p>
   </section>
 
   <section>
